# uilocal

./: README.md  ai-chatbot-app.spec  app.css  app.py  chatbot.py  gitignore  portable_chatbot.py  pyproject.toml  requirements.txt  runtime_hook.py  setup.py  simple_chatbot.py
